<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.addProductActivity">
<!--ToolBar-->
    <RelativeLayout
        android:id="@+id/seller_rela06"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="10dp"
        android:background="@drawable/shape_rect01">
        <ImageButton
            android:id="@+id/backBtn"
            android:src="@drawable/ic_arrow_left"
            android:background="@null"
            android:layout_width="30dp"
            android:layout_height="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/add_product"
            android:textColor="@color/colorAccent"
            android:textSize="20dp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <!---Form to input data-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/seller_rela06">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.blogspot.atifsoftwares.circularimageview.CircularImageView
            android:id="@+id/productIconIv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_cart2"
            app:c_border="true"
            app:c_border_color="@color/colorPrimary"/>

        <EditText
            android:id="@+id/titleEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/title"
            android:background="@drawable/shape_rect02"
            android:drawableStart="@drawable/ic_text"
            android:drawablePadding="10dp"
            android:inputType="textPersonName|textCapWords"
            android:drawableLeft="@drawable/ic_text"
            android:padding="10dp"
            android:layout_below="@+id/productIconIv"/>

        <EditText
            android:id="@+id/descriptionEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/description"
            android:background="@drawable/shape_rect02"
            android:drawableStart="@drawable/ic_text"
            android:drawablePadding="10dp"
            android:inputType="textCapSentences|textMultiLine"
            android:drawableLeft="@drawable/ic_text"
            android:padding="10dp"
            android:layout_below="@+id/titleEt"/>

        <TextView
            android:id="@+id/categoryEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawableEnd="@drawable/ic_arrow_down"
            android:background="@drawable/shape_rect02"
            android:hint="@string/category"
            android:drawableStart="@drawable/ic_nlock"
            android:drawablePadding="10dp"
            android:inputType="textCapSentences|textMultiLine"
            android:padding="10dp"
            android:layout_below="@+id/descriptionEt"
            android:drawableRight="@drawable/ic_arrow_down"
            android:drawableLeft="@drawable/ic_nlock" />

        <EditText
            android:id="@+id/quantityEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/quantity_e_g_kg_g_etc"
            android:background="@drawable/shape_rect02"
            android:drawableStart="@drawable/ic_cart"
            android:drawablePadding="10dp"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:layout_below="@+id/priceEt"
            android:drawableLeft="@drawable/ic_cart" />
        <EditText
            android:id="@+id/priceEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/price"
            android:background="@drawable/shape_rect02"
            android:drawableStart="@drawable/ic_cart"
            android:drawablePadding="10dp"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:layout_below="@+id/categoryEt"
            android:drawableLeft="@drawable/ic_cart" />

        <!--whether or not product on discount-->

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/discountSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_below="@+id/quantityEt"
            android:text="@string/discount"/>

        <EditText
            android:id="@+id/discountPriceEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/discount_price"
            android:background="@drawable/shape_rect02"
            android:drawableStart="@drawable/ic_cart"
            android:drawablePadding="10dp"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:layout_below="@+id/discountSwitch"
            android:drawableLeft="@drawable/ic_cart" />
        <EditText
            android:id="@+id/discountNoteEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/discount_note_e_g_10_off"
            android:background="@drawable/shape_rect02"
            android:drawableStart="@drawable/ic_cart"
            android:drawablePadding="10dp"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:layout_below="@+id/discountPriceEt"
            android:drawableLeft="@drawable/ic_cart" />

        <Button
            android:id="@+id/addProductBtn"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:text="@string/add_product"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorAccent"
            android:minWidth="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/discountNoteEt"/>
    </RelativeLayout>
        </ScrollView>
</LinearLayout>