<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="1dp"
    app:cardElevation="3dp"
    app:contentPadding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.blogspot.atifsoftwares.circularimageview.CircularImageView
            android:id="@+id/shopIv"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/ic_store"
            app:c_border="true"
            app:c_border_width="1dp"
            app:c_border_color="@color/colorPrimary"/>

        <!---online/offline status-->

        <ImageView
            android:id="@+id/onlineIv"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/shape_circle03"/>


        <TextView
            android:id="@+id/shopClosedIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/nextIv"
            android:layout_toLeftOf="@+id/nextIv"
            tools:ignore="UnknownIdInLayout"
            android:background="@drawable/redrectangle"
            android:textSize="15dp"
            android:text="@string/closed"
            android:textAlignment="center"
            android:padding="5dp"
            android:textColor="@color/red"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toEndOf="@id/shopIv"
            android:layout_toStartOf="@+id/nextIv"
            android:layout_toRightOf="@id/shopIv"
            android:layout_toLeftOf="@+id/nextIv">
            
            <TextView
                android:id="@+id/shopNameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                android:text="@string/shop_name"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/phoneTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/addressTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Address"
                android:textColor="@color/colorPrimary"/>

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:numStars="5"
                android:rating="3.5"
                android:progressBackgroundTint="@color/colorAccent"
                android:progressTint="@color/colorPrimaryDark"
                android:layout_gravity="end"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/nextIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_next"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>